finish and clean dsa-stack

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="./bundle.css">
 </head>
 <body>
-<div id="dsaapp">Loading app ...</div>
+<div id="dsaapp">加载应用程序中……</div>
 <script type="text/javascript" src="./bundle.js"></script>
 </body>
 </html>
