--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
   <title>index - test</title>
+  <link rel="stylesheet" type="text/css" href="./demo.css">
 </head>
 <body>
-<h1>data-structure-animation</h1>
+<h1>data-structure-animation <small><abbr title="Sat May 09 2015 20:41:07 GMT+0800 (CST)" class="time-ago"></abbr></small></h1>
 <ul>
-<li><a href="stack.html">stack.html</a></li>
-<li><a href="stack-eval.html">stack-eval.html</a></li>
-<li><a href="queue.html">queue.html</a></li>
-<li><a href="queue-yanghui.html">queue-yanghui.html</a></li>
-<li><a href="rb-tree.html">rb-tree.html</a></li>
+<li><a href="stack.html">栈 | Stack</a></li>
+<li><a href="stack-eval.html">计算表达式 | Evaluate Expressions</a></li>
+<li><a href="queue.html">队列 | Queue</a></li>
+<li><a href="queue-yanghui.html">杨辉三角 | Yang Hui's Triangle</a></li>
+<li><a href="rb-tree.html">红黑树 | Red Black Tree</a></li>
 </ul>
+<script type="text/javascript" src="./demo.js"></script>
 </body>
 </html>
