Auto-grenerated commit

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <link rel="stylesheet" type="text/css" href="./demo.css">
 </head>
 <body>
-<h1>data-structure-animation <small><abbr title="Sat May 09 2015 20:41:07 GMT+0800 (CST)" class="time-ago"></abbr></small></h1>
+<h1>data-structure-animation <small><abbr title="Mon May 11 2015 13:27:53 GMT+0800 (CST)" class="time-ago"></abbr></small></h1>
 <ul>
 <li><a href="stack.html">栈 | Stack</a></li>
 <li><a href="stack-eval.html">计算表达式 | Evaluate Expressions</a></li>
 <li><a href="queue.html">队列 | Queue</a></li>
 <li><a href="queue-yanghui.html">杨辉三角 | Yang Hui's Triangle</a></li>
 <li><a href="rb-tree.html">红黑树 | Red Black Tree</a></li>
+<li><a href="huffman-tree.html">哈夫曼树 | Huffman Tree</a></li>
 </ul>
 <script type="text/javascript" src="./demo.js"></script>
 </body>
