--- a/index.html
+++ b/index.html
@@ -5,7 +5,83 @@
   <link rel="stylesheet" type="text/css" href="./demo.css">
 </head>
 <body>
-<h1>data-structure-animation <small><abbr title="Mon May 11 2015 20:42:13 GMT+0800 (CST)" class="time-ago"></abbr></small></h1>
+<h1>data-structure-animation <small><abbr title="Wed May 13 2015 17:34:26 GMT+0800 (CST)" class="time-ago"></abbr></small></h1>
+<!--
+    <ul>
+      <li>
+        <span>线性</span>
+        <ul>
+          <li>
+            <span>数组</span>
+            <ul>
+              <li>
+                <a href="sort.html">排序</a>
+                <ul>
+                  <li><span>快速排序</span></li>
+                  <li><span>归并排序</span></li>
+                </ul>
+              </li>
+              <li>
+                <a href="search.html">查找</a>
+                <ul>
+                  <li><span>线性查找</span></li>
+                  <li><span>二分查找</span></li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="stack.html">栈</a>
+            <ul>
+              <li><a href="stack-eval.html">算术表达式求值</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="queue.html">队列</a>
+            <ul>
+              <li><a href="queue-yanghui.html">杨辉三角</a></li>
+            </ul>
+          </li>
+          <li>
+            <span>矩阵</span>
+            <ul>
+              <li><a href="mat-tri.html">上三角矩阵</a></li>
+              <li><a href="mat-sparse.html">稀疏矩阵</a></li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <span>非线性</span>
+        <ul>
+          <li>
+            <span>树</span>
+            <ul>
+              <li><a href="rb-tree.html">红黑树</a></li>
+              <li><a href="huffman-tree.html">哈夫曼树</a></li>
+            </ul>
+          </li>
+          <li>
+            <span>图</span>
+            <ul>
+              <li><a href="g-dfs-bfs.html">深度优先遍历、广度优先遍历</a></li>
+              <li><a href="g-topo.html">拓扑排序</a></li>
+              <li><a href="g-sssp-dijkstra.html">最短路径（Dijkstra算法）</a></li>
+              <li><a href="g-mst-prim.html">最小生成树（Prim算法）</a></li>
+              <li><a href="g-scc-tarjan.html">强连通分量（Tarjan算法）</a></li>
+            </ul>
+          </li>
+          <li>
+            <span>散列</span>
+            <ul>
+              <li><a href="hash-open.html">链地址</a></li>
+              <li><a href="hash-closed.html">开地址</a></li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+    </ul>
+-->
 <ul>
 <li><a href="stack.html">栈 | Stack</a></li>
 <li><a href="stack-eval.html">计算表达式 | Evaluate Expressions</a></li>
@@ -13,7 +89,9 @@
 <li><a href="queue-yanghui.html">杨辉三角 | Yang Hui's Triangle</a></li>
 <li><a href="rb-tree.html">红黑树 | Red Black Tree</a></li>
 <li><a href="huffman-tree.html">哈夫曼树 | Huffman Tree</a></li>
+<li><a href="search.html">搜索 | Array Search</a></li>
 </ul>
+
 <script type="text/javascript" src="./demo.js"></script>
 </body>
 </html>
