Auto-grenerated commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="./demo.css">
 </head>
 <body>
-<h1>data-structure-animation <small><abbr title="Wed May 13 2015 17:34:26 GMT+0800 (CST)" class="time-ago"></abbr></small></h1>
+<h1>data-structure-animation <small><abbr title="Fri May 15 2015 09:52:48 GMT+0800 (CST)" class="time-ago"></abbr></small></h1>
 <!--
     <ul>
       <li>
@@ -90,6 +90,7 @@
 <li><a href="rb-tree.html">红黑树 | Red Black Tree</a></li>
 <li><a href="huffman-tree.html">哈夫曼树 | Huffman Tree</a></li>
 <li><a href="search.html">搜索 | Array Search</a></li>
+<li><a href="sort.html">排序 | Array Sort</a></li>
 </ul>
 
 <script type="text/javascript" src="./demo.js"></script>
