Auto-grenerated commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="./demo.css">
 </head>
 <body>
-<h1>data-structure-animation <small><abbr title="Sat May 16 2015 14:33:04 GMT+0800 (CST)" class="time-ago"></abbr></small></h1>
+<h1>data-structure-animation <small><abbr title="Tue May 19 2015 21:30:04 GMT+0800 (CST)" class="time-ago"></abbr></small></h1>
 <!--
     <ul>
       <li>
@@ -89,9 +89,10 @@
 <li><a href="queue-yanghui.html">杨辉三角 | Yang Hui's Triangle</a></li>
 <li><a href="rb-tree.html">红黑树 | Red Black Tree</a></li>
 <li><a href="huffman-tree.html">哈夫曼树 | Huffman Tree</a></li>
-<li><a href="search.html">搜索 | Array Search</a></li>
-<li><a href="sort.html">排序 | Array Sort</a></li>
+<li><a href="search.html">有序数组搜索 | Sorted Array Search</a></li>
+<li><a href="sort.html">数组排序 | Array Sort</a></li>
 <li><a href="hash.html">散列 | Hash</a></li>
+<li><a href="graph.html">图 | Graph</a></li>
 </ul>
 <p><a href="https://github.com/dagnaf/data-structure-animation">Source Code</a></p>
 <script type="text/javascript" src="./demo.js"></script>
