--- a/graph.html
+++ b/graph.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <div id="demo"></div>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.2/react.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+<script type="text/javascript" src="./bower_components/react/react.js"></script>
+<script type="text/javascript" src="./bower_components/d3/d3.js"></script>
 <script type="text/javascript" src="./dsa.js" data-dsa="graph" data-target="demo"></script>
 </body>
 </html>
