--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="./demo.css">
 </head>
 <body>
-<h1>data-structure-animation <small><abbr title="Tue May 19 2015 21:30:04 GMT+0800 (CST)" class="time-ago"></abbr></small></h1>
+<h1>data-structure-animation <small><abbr title="Sat May 23 2015 15:05:47 GMT+0800 (CST)" class="time-ago"></abbr></small></h1>
 <!--
     <ul>
       <li>
@@ -92,7 +92,7 @@
 <li><a href="search.html">有序数组搜索 | Sorted Array Search</a></li>
 <li><a href="sort.html">数组排序 | Array Sort</a></li>
 <li><a href="hash.html">散列 | Hash</a></li>
-<li><a href="graph.html">图 | Graph</a></li>
+<li><a href="graph-app.html">图 | Graph</a></li>
 </ul>
 <p><a href="https://github.com/dagnaf/data-structure-animation">Source Code</a></p>
 <script type="text/javascript" src="./demo.js"></script>
