Auto-grenerated commit

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ svg.legend {
 
 </style>
 <body>
-<script type="text/javascript" src="./bower_components/d3/d3.js" charset="utf-8"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
 <script>
 
 var width = window.innerWidth,
