Auto-grenerated commit

--- a/mst.html
+++ b/mst.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <title>mst - example</title>
-  <link rel="stylesheet" type="text/css" href="./demo.css">
+  <link rel="stylesheet" type="text/css" href="demo.css">
 </head>
 <body>
 <div id="demo"></div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.2/react.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-<script type="text/javascript" src="./dsa.js" data-dsa="mst" data-target="demo"></script>
+<script type="text/javascript" src="dsa.js" data-dsa="mst" data-target="demo"></script>
 </body>
 </html>
