--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ g.item {
 <body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
 <script>
-
++function(){
 var width = window.innerWidth,
     height = window.innerHeight,
     root;
@@ -304,6 +304,7 @@ gitems.append("text")
     .text(function (d) { return d.text; })
     .attr("dy", 5)
     .attr("dx", l_rad+10)
+}();
 </script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
